assets/css/style.css
/* =============================================================================
   App specific CSS file.
   ========================================================================== */

/* universal */

:root {

  /* Bungie specific values: */
  --bungie-power: #DDCB59;

  /* Reference: Grey - 332F46 */
  --grey-bg:      #F7F7F8ff;
  --grey-light-4: #E8E8EAff;
  --grey-light-3: #D2D1D6ff;
  --grey-light-2: #BBBAC1ff;
  --grey-light-1: #A4A3ADff;
  --grey:         #8E8B98ff;
  --grey-dark-1:  #777484ff;
  --grey-dark-2:  #605D6Fff;
  --grey-dark-3:  #4A465Bff;
  --grey-dark-4:  #332F46ff;

  /* Crucible Red and hightlight */
  --crucible-light-5: #F6DCDB;
  --crucible-light-4: #ECB8B8;
  --crucible-light-3: #E39594;
  --crucible-light-2: #D97270;
  --crucible-light-1: #D04E4D;
  --crucible-red:     #C62B29;
  --crucible-dark-1:  #A52422;
  --crucible-dark-2:  #841D1B;
  --crucible-dark-3:  #631615;
  --crucible-dark-4:  #420E0E;
  --crucible-dark-5:  #210707;

  /* --gambit-green: */
  --gambit-green: green;
  
  /* Vanguard Blue and highlights: */
  --vanguard-light-5: #E1EBF6;
  --vanguard-light-4: #C2D8EE;
  --vanguard-light-3: #A4C4E5;
  --vanguard-light-2: #85B0DC;
  --vanguard-light-1: #679DD4;
  --vanguard-blue:    #4889CB;
  --vanguard-dark-1:  #3C72A9;
  --vanguard-dark-2:  #305B87;
  --vanguard-dark-3:  #244566;
  --vanguard-dark-4:  #182E44;
  --vanguard-dark-5:  #0C1722;
}

h1, h2, h3, h4 {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 500;
}

body, p, a {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

html {
  overflow-y: scroll;
}

body {
  background-color: var(--grey-light-3);
  color: white;
}

body::before {
  content: '';
  background-color: var(--grey-light-3);
  /* background: radial-gradient(circle at 50% 70px, var(--vanguard-dark-2) 0%, var(--crucible-dark-4) 100%); */
  background: radial-gradient(circle at 50% 70px, var(--crucible-dark-4) 0%, var(--vanguard-dark-4) 100%);
  /* background: radial-gradient(circle at 50% 70px, var(--grey-dark-2) 0%, var(--crucible-dark-5) 100%); */
  color: white;
  background-position: center top;
  background-repeat: no-repeat;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
  will-change: transform;
  z-index: -1;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

/* Template for any mobile specific items: */
@media screen and (max-width: 600px) {
  .welcome-wrapper h1 {
    text-shadow: 2px 2px 25px black;
  }
}
@media screen and (min-width: 600px) {
  .welcome-wrapper h1{
    text-shadow: 2px 2px 25px black;
  }
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.container-narrow{
  margin: 0 auto;
  max-width: 700px;
}

/* Headings */
h1{
  border-bottom: 1px solid var(--grey-light-4);
}

.sub-heading{
  color: var(--grey-light-2);
  padding: 0;
  margin: 0;
}

/* Forms */

.navbar-form input[type="text"],
.navbar-form input[type="password"] {
  width: 180px;
}


.form-register {
  width: 50%;
}

.form-register .form-control {
  position: relative;
  font-size: 16px;
  height: auto;
  padding: 10px;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

/* header */

.header {
  margin-bottom: 20px;
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #999999;
}

footer a {
  color: #999999;
}

footer p {
  float: right;
  margin-right: 25px;
}

footer ul {
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 10px;
}

footer .company {
  float: left;
  margin-left: 25px;
}

footer .footer-nav {
  float: right;
  margin-right: 25px;
  list-style: none;
}


.alert {
  padding: 20px;
  background-color: #f44336; /* Red */
  color: white;
  margin-bottom: 15px;
}

.close{
  font-size: 20px;
  text-decoration: none;
  color: black;
}

/* Nav bar: */
.nav-bar-main{
  margin-bottom: 20px;
  background-color: var(--crucible-dark-4);
}

@keyframes shimmerBackground {
  0% {background-position:-5000px 0}
  100% {background-position:5000px 0}
}

.icon-shimmer
{
  background-image: -moz-linear-gradient(160deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,0.85) 60%, rgba(255,255,255,0) 100%);
  background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(25%,rgba(255,255,255,0)), color-stop(60%,rgba(255,255,255,0.85)), color-stop(100%,rgba(255,255,255,0)));
  background-image: -webkit-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
  background-image: -o-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
  background-image: -ms-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
  background-image: linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
  background-repeat: repeat-y;
  background-position:-5000px 0;
  animation: shimmerBackground 8s linear infinite;
  height: 96px;
  width: 96px;
  position: absolute;
  top: 50px;
  border-radius: 50%;
}

